<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_order_open"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" 
    >

    <TextView
        android:id="@+id/textView1"
        style="@style/textview_style"
        android:text="@string/phoneNo" />

    <EditText
        android:id="@+id/ET_OpenPhone"
        style="@style/edit_style"
        android:hint="@string/phone_hint"
        android:inputType="number" >
    </EditText>

    <TextView
        style="@style/textview_style"
        android:layout_marginTop="10dp"
        android:text="@string/stationNo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ET_OpneStation"
            style="@style/edit_style"
            android:hint="@string/station_hint"
            android:inputType="number" >
        </EditText>

        <ImageButton
            android:id="@+id/BT_openStation_scan"
            style="@style/scanbutton_style" />
    </FrameLayout>

    <TextView
        style="@style/textview_style"
        android:layout_marginTop="10dp"
        android:text="@string/cwNo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ET_OpenCwno"
            style="@style/edit_style"
            android:hint="@string/cwno_hint"
            android:inputType="number" >
        </EditText>

        <ImageButton
            android:id="@+id/BT_openCwno_scan"
            style="@style/scanbutton_style" />
    </FrameLayout>

    <Button
        android:id="@+id/BT_Open"
        style="@style/button_style"
        android:layout_marginTop="10dp"
        android:text="@string/open" />

</LinearLayout>