<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:holo="http://schemas.android.com/apk/res-auto"
	android:id="@+id/scrollview"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/textview_style"
            android:text="@string/mobileNo" />

        <EditText
            android:id="@+id/ET_RMobile"
            style="@style/edit_style"
            android:hint="@string/mobile_hint"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            style="@style/textview_style"
            android:layout_marginTop="10dp"
            android:text="@string/stationNo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/ET_RStation"
                style="@style/edit_style"
                android:hint="@string/station_hint"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/BT_Rstation_scan"
                style="@style/scanbutton_style" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/textview_style"
            android:layout_marginTop="10dp"
            android:text="@string/cwNo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/ET_RCwno"
                style="@style/edit_style"
                android:hint="@string/cwno_hint"
                android:inputType="number" />
            
            <ImageButton
                android:id="@+id/BT_Rcwno_scan"
                style="@style/scanbutton_style" />
            
        </FrameLayout>
        
        <TextView
            android:id="@+id/textView3"
            style="@style/textview_style"
            android:layout_marginTop="10dp"
            android:text="@string/bicycleNo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/ET_RBicycleNo"
                style="@style/edit_style"
                android:hint="@string/bicycle_hint"
                android:inputType="number" />
            
            <ImageButton
                android:id="@+id/BT_Rbicycleno_scan"
                style="@style/scanbutton_style" />
            
        </FrameLayout>

        <Button
            android:id="@+id/BT_Return"
            style="@style/button_style"
            android:layout_marginTop="10dp"
            android:text="@string/frame_title_bicycle_return" />
    </LinearLayout>

</ScrollView>