<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_order_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        style="@style/textview_style"
        android:text="@string/stationNo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ET_MsgStation"
            style="@style/edit_style"
            android:hint="@string/station_hint"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/BT_msgStation_scan"
            style="@style/scanbutton_style" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        style="@style/textview_style"
        android:layout_marginTop="10dp"
        android:text="@string/messagetitle" />

    <EditText
        android:id="@+id/ET_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:lines="6" >
    </EditText>

    <RadioGroup
        android:id="@+id/RG_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/RB_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/messageStart"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/RB_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageStop"
            android:textColor="@color/gray" />
    </RadioGroup>

    <Button
        android:id="@+id/BT_Update"
        style="@style/button_style"
        android:layout_marginTop="5dp"
        android:text="@string/update" />

</LinearLayout>