<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical" >

    <!-- <include layout="@layout/main_header" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/login_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/textview_style"
                android:text="@string/username" 
                android:layout_marginTop="5dp"
                />

            <EditText
                android:id="@+id/et_username"
                style="@style/edit_style"
                android:hint="@string/usernameHint" 
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                style="@style/textview_style"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/edit_style"
                android:hint="@string/passwordHint"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/ck_remember"
                android:layout_width="wrap_content"
                android:layout_height="35dip"
                android:text="@string/remember"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/BT_Login"
                style="@style/button_style"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/bottom" />

</LinearLayout>